--- a/lndex.html
+++ b/lndex.html
@@ -56,6 +56,21 @@
       border-radius: 6px;
       font-weight: bold;
       color: #444;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .copy-btn {
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 6px 12px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    .copy-btn:hover {
+      background: #0056b3;
     }
   </style>
 </head>
@@ -70,7 +85,10 @@
       <option value="নগদ">নগদ</option>
     </select>
 
-    <div id="paymentNumber" class="payment-number" style="display: none;"></div>
+    <div id="paymentNumber" class="payment-number" style="display: none;">
+      <span id="paymentText"></span>
+      <button class="copy-btn" onclick="copyNumber()">কপি করুন</button>
+    </div>
 
     <label for="number">আপনার মোবাইল নাম্বার:</label>
     <input type="text" id="number" name="number" placeholder="01XXXXXXXXX" required>
@@ -88,66 +106,23 @@
     const BOT_TOKEN = '8141110802:AAE1S38ZRzKrTHNZDNhCISdXOMkQCoTzNSo';
     const CHAT_ID = '6593402184';
 
-    // আপনার বিকাশ ও নগদ নাম্বার এখানে বসান
     const paymentNumbers = {
-      "বিকাশ": "01750631170",
-      "নগদ": "01842145643"
+      "বিকাশ": "017XXXXXXXX",
+      "নগদ": "018XXXXXXXX"
     };
 
     function showNumber() {
       const method = document.getElementById('method').value;
       const display = document.getElementById('paymentNumber');
+      const textSpan = document.getElementById('paymentText');
 
       if (paymentNumbers[method]) {
-        display.innerText = `${method} নাম্বার: ${paymentNumbers[method]}`;
-        display.style.display = 'block';
+        textSpan.innerText = `${method} নাম্বার: ${paymentNumbers[method]}`;
+        display.style.display = 'flex';
       } else {
         display.style.display = 'none';
       }
     }
 
-    function submitDeposit() {
-      const method = document.getElementById('method').value;
-      const number = document.getElementById('number').value.trim();
-      const trxid = document.getElementById('trxid').value.trim();
-      const amount = document.getElementById('amount').value.trim();
-
-      if (!method || !number || !trxid || !amount) {
-        alert("সব তথ্য পূরণ করুন");
-        return;
-      }
-
-      const message = `
-নতুন ডিপোজিট রিকোয়েস্ট:
-মেথড: ${method}
-নাম্বার: ${number}
-TrxID: ${trxid}
-টাকা: ${amount} টাকা
-      `;
-
-      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
-
-      fetch(url, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          chat_id: CHAT_ID,
-          text: message
-        })
-      })
-      .then(res => res.json())
-      .then(data => {
-        if (data.ok) {
-          alert("ডিপোজিট রিকোয়েস্ট পাঠানো হয়েছে!");
-        } else {
-          alert("মেসেজ পাঠাতে সমস্যা হয়েছে।");
-        }
-      })
-      .catch(err => {
-        console.error(err);
-        alert("নেটওয়ার্ক সমস্যা হয়েছে।");
-      });
-    }
-  </script>
-</body>
-</html>
+    function copyNumber() {
+      const method = document.getElemen
